--- a/web/lab2/style.css
+++ b/web/lab2/style.css
@@ -1,12 +1,156 @@
 *
 {
-	font-family: "Calibri";
-	font-size: "12pt";
+	font-family : "Calibri";
+	font-size : "12pt";
+}
+
+/* Head */
+
+header
+{
+    position : fixed;
+    top : 0px;
+    left : 0px;
+    right : 0px;
+    padding : 0px;
+    margin : 0px;
+    float : right;
+    background-image : url("logo.png");
+    background-repeat : no-repeat no-repeat;    
+}
+
+header nav
+{
+    margin : 0px;
+    padding : 0px;
+    margin-top : 100px;
+    background-color : rgba(64, 96, 127, 0.7);
+}
+
+header nav ul
+{
+    padding : 0px;
+    margin : 0px;
+}
+
+header nav li
+{
+    display : inline-block;
+    padding : 10px;
+}
+
+header nav li:first-child
+{
+    margin : 0px;
+    padding : 0px;
+}
+
+header nav
+{
+    color : #fff;
+}
+
+header nav a
+{
+    color : #fff;
+}
+
+@media handheld {
+    
+header
+{
+	position : absolute;
 }
 
 
-@media 
-header
-{
-	position: fixed;
+}
+
+@media tv {
+
+main-menu {
+	margin:113px 0 0 0;
+	float:right;
+}
+.main-menu ul {
+	margin:0;
+}
+.main-menu li ul {
+	padding-top:2px;
+	left:-2px;
+}
+.main-menu li ul li {
+	box-shadow:2px 2px 2px 0px rgba(0,0,0,0.1);
+}
+.main-menu li {
+	white-space:nowrap;
+	display:block;
+	position:relative;
+	margin:0;
+	padding:0;
+	z-index:100;
+}
+.main-menu a {
+	display:block;
+	position:relative;
+	font-size:14px;
+	font-family:"Helvetica neue", Arial, sans-serif;
+	color:#f9f4e1;
+	font-weight:bold;
+}
+.main-menu a:hover {
+	text-decoration:none;
+	color:#d8c0a8;
+}
+.main-menu li.submenu > a {
+	padding-right:20px;
+	background:url(../images/menu_down_arrow.png) no-repeat right;
+	cursor:default;
+}
+.main-menu > ul > li {
+	float:left;
+	margin-right:28px;
+}
+.main-menu > ul > li:last-child {
+	margin-right:0;
+}
+.main-menu li ul {
+	display:none;
+	position:absolute;
+	top:100%;
+	z-index:100;
+}
+.main-menu li:hover > ul {
+	display:block;
+}
+.main-menu li ul li.submenu > a {
+	padding-right:10px;
+	background:#403830 url(../images/submenu_left_arrow.png) no-repeat right;
+}
+.main-menu li ul li.submenu > a:hover {
+	padding-right:10px;
+	background:#f5f5f5 url(../images/submenu_left_arrow.png) no-repeat right;
+}
+.main-menu li ul li {
+	border-bottom:1px solid #534a42;
+	background:#FFF;
+}
+.main-menu li ul li a:hover {
+	background:#f5f5f5;
+	color:#d43a32;
+}
+.main-menu li ul li:last-child {
+	border-bottom:1px solid #2e2823;
+}
+.main-menu li ul li a {
+	padding:0 25px 0 12px;
+	line-height:33px;
+	background:#403830;
+}
+.main-menu li ul li ul {
+	top:-1px !important;
+	left:100% !important;
+	padding:0 !important;
+}
+
+
 }
