--- a/web/lab2/style.css
+++ b/web/lab2/style.css
@@ -1,65 +1,123 @@
 *
 {
 	font-family : "Calibri";
-	font-size : "12pt";
+	font-size : 12pt;
 }
 
-/* Head */
+body
+{
+    padding : 0px;
+    margin : 0px;
+}
 
 header
 {
-    position : fixed;
-    top : 0px;
+    position : relative;
+    display : block;
     left : 0px;
     right : 0px;
+    top : 0px;
     padding : 0px;
     margin : 0px;
-    float : right;
     background-image : url("logo.png");
     background-repeat : no-repeat no-repeat;    
 }
 
+main
+{
+    
+}
+
+footer
+{
+    
+}
+
+/* Head */
+
+.logo
+{
+    display : block;
+    width : 100%;
+    height : 50px;
+    margin : 0px;
+    padding : 0px;
+}
+
 header nav
 {
     margin : 0px;
     padding : 0px;
-    margin-top : 100px;
     background-color : rgba(64, 96, 127, 0.7);
 }
 
-header nav ul
+.menu
 {
+    display : inline;
     padding : 0px;
     margin : 0px;
 }
 
-header nav li
+.menu li
 {
     display : inline-block;
     padding : 10px;
+    /*border-right : 3px solid #fff;*/
 }
 
-header nav li:first-child
+.menu li:last-child
 {
-    margin : 0px;
-    padding : 0px;
+    border-right : none;
+}
+
+.menu li:first-child
+{
+    background-color : rgba(0, 0, 0, 0.5);
+}
+
+.menu li:hover
+{
+    background-color : rgba(64, 255, 192, 0.5);
 }
 
 header nav
 {
+    font-size : 16pt;
     color : #fff;
 }
 
-header nav a
+header nav .menu a
 {
     color : #fff;
+    text-decoration : none;
 }
+
+header nav .menu a:hover
+{
+    text-decoration : underline;
+}
+
+.search
+{
+    width : 30%;
+    float : right;
+    padding : 5px;
+}
+
+
+footer
+{
+    position: fixed;
+    bottom: 0px;
+}
+
 
 @media handheld {
     
 header
 {
 	position : absolute;
+    
 }
 
 
